Classes with empty PermittedSubclasses attribute cannot be extended

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • b28

      Currently, if the number_of_classes field in the PermittedSubclasses attribute is zero then the JVM throws a ClassFormatError exception. Instead, no exception should be thrown and the class cannot be extended.

            Assignee:
            Harold Seigel (Inactive)
            Reporter:
            Harold Seigel (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: