8256867: Classes with empty PermittedSubclasses attribute cannot be extended